<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_app">Notes App</string>
    <string name="intro_splash">Take note of your ideas and never miss anything important!</string>
    <string name="note_title">Title...</string>
    <string name="note_content">Notes</string>
    <string name="note_priority">Priority:</string>
    <string name="no_filter">No Filter</string>
    <string name="note_date">Date</string>
    <string name="high_to_low">High To Low</string>
    <string name="low_to_high">Low To High</string>
    <string name="empty_notes">Empty Notes</string>
</resources>