<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".presentation.ui.fragment.home.HomeFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_btn_add_note_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/name_app"
        android:src="@drawable/ic_add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_list_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_filter"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/layout_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_filter" />

        <TextView
            android:padding="5dp"
            android:background="@drawable/custom_tv_filter_select"
            android:id="@+id/tv_no_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/sans_regular"
            android:text="@string/no_filter" />

        <TextView
            android:padding="5dp"
            android:background="@drawable/custom_tv_filter"
            android:id="@+id/tv_filter_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/sans_regular"
            android:text="@string/high_to_low" />

        <TextView
            android:padding="5dp"
            android:background="@drawable/custom_tv_filter"
            android:id="@+id/tv_filter_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/sans_regular"
            android:text="@string/low_to_high" />

    </LinearLayout>

</RelativeLayout>