<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edt_note_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edt"
            android:fontFamily="@font/sans_regular"
            android:hint="@string/note_title"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/sans_regular"
                android:text="@string/note_priority"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/img_priority_green"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_done"
                android:background="@drawable/green_dot" />

            <ImageView
                android:id="@+id/img_priority_yellow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/yellow_dot" />

            <ImageView
                android:id="@+id/img_priority_red"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/red_dot" />


        </LinearLayout>

        <EditText
            android:id="@+id/edt_note_content"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="30dp"
            android:gravity="top"
            android:paddingTop="10dp"
            android:paddingStart="5dp"
            android:background="@drawable/custom_edt"
            android:fontFamily="@font/sans_regular"
            android:hint="@string/note_content"
             />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_btn_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/name_app"
        android:src="@drawable/ic_done" />

</RelativeLayout>