<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/img_note_add_priority"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@drawable/red_dot"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_note_add_tilte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="15sp"
                android:fontFamily="@font/sans_bold"
                android:text="@string/note_title" />

            <TextView
                android:id="@+id/tv_note_add_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:fontFamily="@font/sans_regular"
                android:maxLines="2"
                android:text="@string/note_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_note_add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/sans_bold"
            android:text="@string/note_date"
            android:textColor="@color/black" />

    </androidx.cardview.widget.CardView>

</LinearLayout>